fix: text wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,13 @@ body {
     padding: 20px;
     height: 100%;
     padding-bottom: 50px;
+    clear: both;
   }
 
 .profile-picture {
     border: 5px solid #397db9; /* Change the color and size as needed */
-    max-width: 238px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 250px;
 }
 
 .profile-container {
